syntax = "proto3";

option go_package = "./pb";

package pb;

message ChatListReq {
  int64 uid = 1;
}

message ChatContent {
  int64 uid = 1;
  string username = 2;
  string content = 3;
}

message ChatListResp {
  repeated ChatContent list = 1;
}

service ChatCenter {
  rpc GetChatList(ChatListReq) returns (ChatListResp);
}